# mosaic

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE.bsd-2.md  Makefile  README.md  cliff.toml  mosaic.spec  pyproject.toml  release.sh  wrangler.toml
.claude/skills/mosaic/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build.yml  deploy-worker.yml  pr-title.yml  telegram-issues.yml  telegram-pr.yml  telegram-push.yml  telegram-release.yml  telegram-weekly.yml  tests.yml
bot/: bot.py  worker.js
docs/: index.md  make_gifs.sh  maxwell_compare.md  package-lock.json  package.json
docs/.vitepress/: config.mts
docs/.vitepress/theme/: custom.css
docs/guide/: agent-workflows.md  authenticated-access.md  cache.md  changelog.md  citation-graph.md  cli-reference.md  compare.md  configuration.md  contributing.md  custom-sources.md  index.md  installation.md  network.md  notebooklm.md  obsidian.md  rag.md  relevance-ranking.md  similar.md  sources.md  telegram.md  usage.md  web-ui.md  zotero.md
docs/public/: coverage-badge.json  coverage.json
docs/public/gifs/tapes/: 01_quick_search.tape  02_search_download.tape  03_filter_search.tape  04_doi_get.tape  05_config.tape  06_auth_status.tape  07_notebook.tape  08_output_formats.tape  09_zotero.tape  10_similar.tape  11_cache.tape  12_bulk_get.tape  13_obsidian.tape  14_cached_search.tape  15_rag_index.tape  16_rag_ask.tape  17_rag_chat.tape
licensing/: LICENSE.bsd-3.md  LICENSE.mit.md
mosaic/: __init__.py  __main__.py  auth.py  bulk.py  cite.py  cli.py  compare.py  config.py  db.py  downloader.py  embeddings.py  errors.py  exporter.py  gui_launcher.py  helpers.py  models.py  network.py  notebooklm_bridge.py  obsidian.py  parsing.py  pdf.py  rag.py  ranking.py  search.py  services.py  similar.py  source_registry.py  workflows.py  zotero.py
mosaic/citations/: __init__.py  base.py  crossref.py  enrichment.py  openalex.py  opencitations.py  registry.py
mosaic/data/: SKILL.md
mosaic/sources/: __init__.py  arxiv.py  base.py  base_search.py  biorxiv.py  core.py  crossref.py  custom.py  dblp.py  doaj.py  europepmc.py  hal.py  ieee.py  nasa_ads.py  openalex.py  pedro.py  pmc.py  pubmed.py  sciencedirect.py  sciencedirect_browser.py  scopus_api.py  scopus_browser.py  semantic_scholar.py  springer_api.py  springer_browser.py  unpaywall.py  zenodo.py
mosaic/ui/: __init__.py  jobs.py  routes.py
mosaic/ui/templates/: base.html  bulk.html  config.html  detail.html  history.html  notebook.html  rag_ask.html  rag_chat.html  rag_index.html  rag_landing.html  search.html  sessions.html  similar.html
mosaic/ui/templates/partials/: job_status.html  results.html
tests/: conftest.py  test_auth.py  test_biorxiv.py  test_bulk.py  test_cache_enrich.py  test_cache_mgmt.py  test_citations.py  test_cite.py  test_compare.py  test_config.py  test_custom_source.py  test_db.py  test_downloader.py  test_exporter.py  test_models.py  test_network.py  test_notebooklm_bridge.py  test_obsidian.py  test_pdf.py  test_pedro.py  test_rag.py  test_ranking.py  test_search.py  test_services_errors_jobs.py  test_similar.py  test_sources.py  test_ui.py  test_zotero.py
