[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mosaic-search"
version = "0.0.14"
description = "Multi-source Scientific Article Index and Collector"
readme = "README.md"
license = { text = "GPL-3.0-or-later OR BSD-2-Clause OR BSD-3-Clause OR MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Stefano Zaghi", email = "stefano.zaghi@gmail.com" },
]
keywords = ["science", "papers", "search", "download", "arxiv", "pubmed", "open-access"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "License :: OSI Approved :: BSD License",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
    "httpx>=0.27",
    "typer>=0.12",
    "rich>=13",
    "tomli-w>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov>=5", "build>=1.2"]
notebooklm = ["notebooklm-py[browser]>=0.10"]

[project.urls]
Homepage      = "https://szaghi.github.io/mosaic/"
Documentation = "https://szaghi.github.io/mosaic/"
Repository    = "https://github.com/szaghi/mosaic"
"Bug Tracker" = "https://github.com/szaghi/mosaic/issues"

[project.scripts]
mosaic = "mosaic.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["mosaic*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=mosaic --cov-report=term-missing"

[tool.coverage.run]
source = ["mosaic"]
branch = true
omit = ["mosaic/__main__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]
