[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mosaic-search"
version = "1.5.0"
description = "Multi-source Scientific Article Indexer and Collector"
readme = "README.md"
license = { text = "GPL-3.0-or-later OR BSD-2-Clause OR BSD-3-Clause OR MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Stefano Zaghi", email = "stefano.zaghi@gmail.com" },
]
keywords = ["science", "papers", "search", "download", "arxiv", "pubmed", "open-access"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "License :: OSI Approved :: BSD License",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
    "httpx>=0.27",
    "typer>=0.12",
    "rich>=13",
    "tomli-w>=1.0",
    "rank-bm25>=0.2.2",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov>=5", "build>=1.2", "pyinstaller>=6.0", "ruff>=0.8"]
notebooklm = ["notebooklm-py[browser]>=0.10"]
browser = ["playwright>=1.40"]
ui = ["flask>=3.0", "waitress>=3.0"]
desktop = ["flask>=3.0", "waitress>=3.0"]
rag = ["sqlite-vec>=0.1.6"]
analysis = ["networkx>=3.0"]
all = [
    "flask>=3.0", "waitress>=3.0",
    "sqlite-vec>=0.1.6",
    "networkx>=3.0",
    "playwright>=1.40",
    "notebooklm-py[browser]>=0.10",
]

[project.urls]
Homepage      = "https://szaghi.github.io/mosaic/"
Documentation = "https://szaghi.github.io/mosaic/"
Repository    = "https://github.com/szaghi/mosaic"
"Bug Tracker" = "https://github.com/szaghi/mosaic/issues"

[project.scripts]
mosaic = "mosaic.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["mosaic*"]

[tool.setuptools.package-data]
"mosaic" = ["ui/templates/**/*.html", "ui/static/**/*", "data/SKILL.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=mosaic --cov-report=term-missing"

[tool.coverage.run]
source = ["mosaic"]
branch = true
omit = ["mosaic/__main__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]

# ── Ruff ──────────────────────────────────────────────────────────────────────

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "RUF",    # ruff-specific rules
    "S",      # flake8-bandit (security)
    "T20",    # flake8-print
    "PIE",    # flake8-pie
    "PT",     # flake8-pytest-style
    "RET",    # flake8-return
    "C4",     # flake8-comprehensions
]
ignore = [
    "E501",   # line length — handled by formatter
    "E701",   # multiple statements on one line — used for compact flag blocks
    "S101",   # assert — fine in tests
    "S110",   # try-except-pass — intentional for non-fatal per-source failures
    "S112",   # try-except-continue — same as S110
    "S314",   # suspicious XML — we parse trusted API responses
    "S603",   # subprocess call — we control inputs
    "S607",   # partial executable path
    "T201",   # print — CLI tool uses print extensively
    "RET504", # unnecessary assignment before return
    "B008",   # function call in default argument — typer uses this pattern
    "UP007",  # X | Y union syntax — keep Optional for readability where used
    "SIM105", # suppressible-exception — contextlib.suppress less readable here
    "SIM108", # if-else-block — ternary less readable for multi-line logic
    "SIM117", # multiple-with — collapsing with statements hurts readability
    "RUF001", # ambiguous unicode — intentional in user-facing strings (arrows, ellipsis)
    "TCH",    # type-checking imports — marginal perf gain, adds complexity
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S", "B011", "PT", "N802", "RUF059"]
"mosaic/cli.py" = ["B006", "B008", "RUF013"]
"mosaic.spec" = ["E", "F"]

[tool.ruff.lint.isort]
known-first-party = ["mosaic"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
